# platform-learnai

./: .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/chat/: apps.py
apps/config/: urls.py
apps/config/settings/: base.py  dev.py  prod.py
apps/core/: apps.py  urls.py  views.py
apps/course/: apps.py
apps/pages/: apps.py
apps/progress/: apps.py
apps/user/: apps.py  backends.py  urls.py
apps/user/dto/: register.py  user.py
apps/user/forms/: __init__.py  login.py  register.py
apps/user/migrations/: 0001_initial.py
apps/user/models/: user.py
apps/user/repositories/: user.py
apps/user/services/: user.py
apps/user/views/: __init__.py  login.py  logout.py  register.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
static/core/css/: dashboard.css  login.css  style.css
static/core/js/: dashboard.js  login.js
templates/core/: dashboard.html  index.html  login.html
